--- a/marni/index.html
+++ b/marni/index.html
@@ -33,6 +33,7 @@
     </div>
     
   </div>
+	<p>Top 15 Confirmed Cases</p>
 <object data="radial.html" width="800" height="900"></object>
 </div>
 
